build/k8s/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-service
  labels: 
    app: webapp-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-service
  template:
    metadata:
      labels:
        app: webapp-service
    spec:
      containers:
      - name: webapp-service
        image: "zacharywalters/cultivate-finance-webapp-service:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 8662
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp-service
  ports:
    - protocol: TCP
      name: main-port
      port: 8662
      targetPort: 8662
    - protocol: TCP
      name: nats-port
      port: 4222
      targetPort: 4222
