build/k8s/wiki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-service
  labels: 
    app: wiki-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-service
  template:
    metadata:
      labels:
        app: wiki-service
    spec:
      containers:
      - name: wiki-service
        image: "zacharywalters/cultivate-finance-wiki-service:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 8181
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: wiki-service
spec:
  selector:
    app: wiki-service
  ports:
    - protocol: TCP
      name: main-port
      port: 8181
      targetPort: 8181
