build/k8s/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultivate-finance-ingress
  labels:
    name: cultivate-finance-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: cultivatefinance.69a647ae-f0bd-4517-8be3-281c686f37f1.k8s.civo.com
    http:
      paths:
      - path: "/api/401k_calculator/"
        pathType: Prefix
        backend: 
          service:
            name: api-gateway-service
            port:
              number: 8661
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webapp-service 
            port: 
              number: 8662
