build/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultivate-finance-ingress
  labels:
    name: cultivate-finance-ingress
spec:
  rules:
  - host: cultivatefinance.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service 
            port: 
              number: 8662
